Added buildings and washrooms to DB